--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="phonecatApp">
+<html lang="en" ng-app="phonecatApp" nv-file-drop="" uploader="uploader" filters="queueLimit, customFilter">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,7 +7,12 @@
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="css/app.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
-  <!--<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">-->
+  <!---<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">--->
+  <!-- Fix for old browsers -->
+  <script src="http://nervgh.github.io/js/es5-shim.min.js"></script>
+  <script src="http://nervgh.github.io/js/es5-sham.min.js"></script>
+  <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+  <script src="js/console-sham.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular/ui-bootstrap-tpls-0.13.0.min.js"></script>
@@ -16,6 +21,7 @@
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-sanitize.js"></script>
   <script src="js/app.js"></script>
   <script src="js/controllers.js"></script>
+  <script src="js/angular-file-upload.js"></script>
 </head>
 <body>
 	<div ng-view></div>
